force-app/main/default/objects/Progress_Note__c/Progress_Note__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Progress Note</label>
    <nameField>
        <displayFormat>PROG_NOTE-{0}</displayFormat>
        <label>Progress Note #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>