force-app/main/default/objects/Progress_Note__c/fields/Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Date__c</fullName>
    <label>Approval / Rejection Date</label>
    <type>Date</type>
</CustomField>