force-app/main/default/objects/Progress_Note__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Progress Notes</relationshipLabel>
    <relationshipName>Progress_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>