force-app/main/default/objects/Progress_Note__c/fields/Client_Session__c.field-meta.xml
<CustomField>
    <fullName>Client_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECM v1. Client Session</description>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Progress Notes</relationshipLabel>
    <relationshipName>Progress_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>