force-app/main/default/objects/Progress_Note__c/fields/Direct_Service__c.field-meta.xml
<CustomField>
    <fullName>Direct_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Service</label>
    <referenceTo>Direct_Service__c</referenceTo>
    <relationshipLabel>Progress Notes</relationshipLabel>
    <relationshipName>Progress_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>