force-app/main/default/objects/Progress_Note__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The staff member who authored the original progress notes.</inlineHelpText>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Progress_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>